fix: add `backface-visibility: hidden` to cropper image to avoid ghost lines when moving
ref #982

--- a/src/css/cropper.scss
+++ b/src/css/cropper.scss
@@ -10,6 +10,7 @@ $cropper-image-path: '../images' !default;
     user-select: none;
 
     img {
+      backface-visibility: hidden;
       display: block;
       height: 100%;
       image-orientation: 0deg;
